{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 38,
  "lineage": "01c35f33-fb66-ef39-6bc7-ecbba23af346",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "example_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b023852b-1fcd-461c-bb3b-e4f7e792aa89/resourceGroups/terraform-introduction-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg",
            "location": "northeurope",
            "name": "example-nsg",
            "resource_group_name": "terraform-introduction-resources",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "example_ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b023852b-1fcd-461c-bb3b-e4f7e792aa89/resourceGroups/terraform-introduction-resources/providers/Microsoft.Network/networkSecurityGroups/example-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "example-nsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "terraform-introduction-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.example_nsg",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "static-public-ip-example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b023852b-1fcd-461c-bb3b-e4f7e792aa89/resourceGroups/terraform-introduction-resources/providers/Microsoft.Network/publicIPAddresses/main-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.79.191.16",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "main-public-ip",
            "resource_group_name": "terraform-introduction-resources",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d4f835c8-83a5-4026-87f9-a47af95f48af",
            "id": "/subscriptions/b023852b-1fcd-461c-bb3b-e4f7e792aa89/resourceGroups/terraform-introduction-resources/providers/Microsoft.Network/virtualNetworks/terraform-introduction-network",
            "location": "northeurope",
            "name": "terraform-introduction-network",
            "resource_group_name": "terraform-introduction-resources"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}